--- a/order-pizza.html
+++ b/order-pizza.html
@@ -14,25 +14,28 @@
 <header>
     <div class="container-fluid">
         <div class="row">
-            <div class="d-flex col">
-                <span class="pizza-world col-1">Pizza World</span>
+            <div class="d-flex col align-items-center">
+                <span class="pizza-world col-1 ">Pizza World</span>
                 <ul class="nav col-2 mb-2 mb-md-0">
                     <li><a href="#" class="order-tab nav-link px-2 text-secondary">Order Online</a></li>
                     <li><a href="#" class="menu-tab nav-link px-2 text-secondary">Menu</a></li>
                 </ul>
 
-                <form class="search-box col-3 m-2 me-lg-auto" role="search">
+                <form class="search-box m-2 me-lg-auto d-flex" role="search">
                     <input type="search" class="search-bar form-control form-control-dark text-bg-light"
                            placeholder="Zip Code"
                            aria-label="Search">
-                    <button class="btn btn-outline-success m-2 col-2" type="submit">Search stores near you!</button>
+                    <button class="btn btn-outline-success m-2" type="submit">Search stores near you!</button>
                 </form>
 
                 <div class="sign-up col-2 text-end ">
                     <button type="button" class="btn me-2">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
-                        <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
-                    </svg> Sign Up! </button>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                             class="bi bi-person-fill" viewBox="0 0 16 16">
+                            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
+                        </svg>
+                        Sign Up!
+                    </button>
                 </div>
             </div>
         </div>
@@ -58,13 +61,13 @@
                 </li>
                 <li class="nav-item" role="presentation">
                     <button class="nav-link" id="cheese-tab" data-bs-toggle="tab" data-bs-target="#cheese-sauce-2"
-                    type="button" role="tab" aria-controls="cheese-sauce-2-tab-pane" aria-selected="false">
+                            type="button" role="tab" aria-controls="cheese-sauce-2-tab-pane" aria-selected="false">
                         <span><strong>2</strong></span> Cheese and Sauce
                     </button>
                 </li>
                 <li class="nav-item" role="presentation">
                     <button class="nav-link" id="toppings-tab" data-bs-toggle="tab" data-bs-target="#toppings-3"
-                    type="button" role="tab" aria-controls="toppings-3-tab-pane" aria-selected="false">
+                            type="button" role="tab" aria-controls="toppings-3-tab-pane" aria-selected="false">
                         <span><strong>3</strong></span> Toppings
                     </button>
                 </li>
@@ -73,103 +76,109 @@
     </div>
 </div>
 <div class="tab-content" id="myTabContent">
-            <div class="crust-choice container border p-0 tab-pane fade show active" role="tabpanel" id="crust-1" aria-labelledby="crust-1-tab" tabindex="0" >
-                <div class="size-crust-alert bg-primary p-2 text-light">Choose Size and Crust</div>
-                <div class="row m-2 tab-pane">
-                    <div class="hand-toss-crust column card p-0 my-2">
-                        <div class="card-header hand-toss">
-                            Hand Tossed
-                        </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Garlic Seasoned Crust with rich, buttery taste.</li>
-                            <li class="list-group-item"><label for="small-tossed"><input type="radio" id ="small-tossed" name="crust" value="tossed-10in"> Small (10")</label></li>
-                            <li class="list-group-item"><label for="medium-tossed"><input type="radio" id="medium-tossed" name="crust" value="tossed-12in"> Medium (12")</label></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="row m-2">
-                    <div class="thin-crust column card p-0 my-2">
-                        <div class="card-header crispy-thin">
-                            Crispy Thin
-                        </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item"> Thin enough for optimum crispy to crunchy ratio </li>
-                            <li class="list-group-item"><label for="medium-thin"><input type="radio" id="medium-thin" name="crust" value="thin-12in"> Medium (12")</label></li>
-                            <li class="list-group-item"><label for="large-thin"><input type="radio" id="large-thin" name="crust" value="thin-14in"> Large (14")</label></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="crust-next row m-0">
-                    <div class="column bg-body-secondary p-0 d-flex">
-                        <a class="btn btn-primary btnNext m-2" href="#">Next Step ></a>
-                    </div>
-                </div>
-            </div>
-
-<div class="cheese-sauce container border p-0 tab-pane fade" id="cheese-sauce-2" role="tabpanel" aria-labelledby="cheese-tab" tabindex="0">
-    <div class="cheese-sauce-alert bg-primary p-2 text-light" >Choose Cheese and Sauce</div>
-    <div class="row m-2" >
-        <div class="cheese-dropdown column card p-0">
-            <div class="card-header cheese">
-                Cheese
-            </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">How Much?</li>
-                <div class="cheese dropdown p-2">
-                    <button class="btn d-flex btn-secondary dropdown-toggle bg-light text-dark w-100 align-items-center" type="button" data-bs-toggle="dropdown" aria-expanded="false"> Cheese Amount
-                    </button>
-                    <ul class="dropdown-menu w-100">
-                        <li><a class="dropdown-item active" href="#" aria-current="true">Normal</a></li>
-                        <li><a class="dropdown-item" href="#">Extra Cheese</a></li>
-                        <li><a class="dropdown-item" href="#">Less Cheese</a></li>
-                    </ul>
-                </div>
-            </ul>
-        </div>
-    </div>
-    <div class="row m-2" >
-    <div class="cheese-dropdown column card p-0">
-        <div class="card-header cheese">
-            Cheese
-        </div>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item">What Type?</li>
-            <div class="sauce dropdown p-2">
-                <button class="btn d-flex btn-secondary dropdown-toggle bg-light text-dark w-100 align-items-center" type="button" data-bs-toggle="dropdown" aria-expanded="false"> Sauce Choice
-                </button>
-                <ul class="dropdown-menu w-100">
-                    <li><a class="dropdown-item active" href="#" aria-current="true">Tomato</a></li>
-                    <li><a class="dropdown-item" href="#">Alfredo</a></li>
-                    <li><a class="dropdown-item" href="#">Pesto</a></li>
-                    <li><a class="dropdown-item" href="#">No Sauce</a></li>
+    <div class="crust-choice container border p-0 tab-pane fade show active" role="tabpanel" id="crust-1"
+         aria-labelledby="crust-1-tab" tabindex="0">
+        <div class="size-crust-alert bg-primary p-2 text-light">Choose Size and Crust</div>
+        <div class="row m-2 tab-pane">
+            <div class="hand-toss-crust column card p-0 my-2">
+                <div class="card-header hand-toss">Hand Tossed</div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Garlic Seasoned Crust with rich, buttery taste.</li>
+                    <li class="list-group-item"><label for="small-tossed"><input type="radio" id="small-tossed" name="crust" value="tossed-10in"> Small
+                        (10")</label></li>
+                    <li class="list-group-item"><label for="medium-tossed"><input type="radio" id="medium-tossed" name="crust" value="tossed-12in">
+                        Medium (12")</label></li>
                 </ul>
             </div>
-        </ul>
-        <div class="cheese-dropdown p-0">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">How Much?</li>
-                <div class="cheese dropdown p-2">
-                    <button class="btn d-flex btn-secondary dropdown-toggle bg-light text-dark w-100 align-items-center" type="button" data-bs-toggle="dropdown" aria-expanded="false"> Sauce Amount
-                    </button>
-                    <ul class="dropdown-menu w-100">
-                        <li><a class="dropdown-item active" href="#" aria-current="true">Normal</a></li>
-                        <li><a class="dropdown-item" href="#">Extra Sauce</a></li>
-                        <li><a class="dropdown-item" href="#">Less Sauce</a></li>
+        </div>
+        <div class="row m-2">
+            <div class="thin-crust column card p-0 my-2">
+                <div class="card-header crispy-thin">
+                    Crispy Thin
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item"> Thin enough for optimum crispy to crunchy ratio</li>
+                    <li class="list-group-item"><label for="medium-thin"><input type="radio" id="medium-thin" name="crust" value="thin-12in"> Medium (12")</label></li>
+                    <li class="list-group-item"><label for="large-thin"><input type="radio" id="large-thin" name="crust" value="thin-14in"> Large (14")</label></li>
+                </ul>
+            </div>
+        </div>
+        <div class="crust-next row m-0">
+            <div class="column bg-body-secondary p-0 d-flex">
+                <a class="btn btn-primary btnNext m-2" href="#">Next Step ></a>
+            </div>
+        </div>
+    </div>
+
+    <div class="cheese-sauce container border p-0 tab-pane fade" id="cheese-sauce-2" role="tabpanel"
+         aria-labelledby="cheese-tab" tabindex="0">
+        <div class="cheese-sauce-alert bg-primary p-2 text-light">Choose Cheese and Sauce</div>
+        <div class="row m-2">
+            <div class="cheese-dropdown column card p-0">
+                <div class="card-header cheese">
+                    Cheese
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">How Much?</li>
+                    <div class="cheese dropdown p-2">
+                        <button class="btn d-flex btn-secondary dropdown-toggle bg-light text-dark w-100 align-items-center"
+                                type="button" data-bs-toggle="dropdown" aria-expanded="false"> Cheese Amount
+                        </button>
+                        <ul class="dropdown-menu w-100">
+                            <li><a class="dropdown-item active" href="#" aria-current="true">Normal</a></li>
+                            <li><a class="dropdown-item" href="#">Extra Cheese</a></li>
+                            <li><a class="dropdown-item" href="#">Less Cheese</a></li>
+                        </ul>
+                    </div>
+                </ul>
+            </div>
+        </div>
+        <div class="row m-2">
+            <div class="cheese-dropdown column card p-0">
+                <div class="card-header cheese">
+                    Cheese
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">What Type?</li>
+                    <div class="sauce dropdown p-2">
+                        <button class="btn d-flex btn-secondary dropdown-toggle bg-light text-dark w-100 align-items-center"
+                                type="button" data-bs-toggle="dropdown" aria-expanded="false"> Sauce Choice
+                        </button>
+                        <ul class="dropdown-menu w-100">
+                            <li><a class="dropdown-item active" href="#" aria-current="true">Tomato</a></li>
+                            <li><a class="dropdown-item" href="#">Alfredo</a></li>
+                            <li><a class="dropdown-item" href="#">Pesto</a></li>
+                            <li><a class="dropdown-item" href="#">No Sauce</a></li>
+                        </ul>
+                    </div>
+                </ul>
+                <div class="cheese-dropdown p-0">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">How Much?</li>
+                        <div class="cheese dropdown p-2">
+                            <button class="btn d-flex btn-secondary dropdown-toggle bg-light text-dark w-100 align-items-center"
+                                    type="button" data-bs-toggle="dropdown" aria-expanded="false"> Sauce Amount
+                            </button>
+                            <ul class="dropdown-menu w-100">
+                                <li><a class="dropdown-item active" href="#" aria-current="true">Normal</a></li>
+                                <li><a class="dropdown-item" href="#">Extra Sauce</a></li>
+                                <li><a class="dropdown-item" href="#">Less Sauce</a></li>
+                            </ul>
+                        </div>
                     </ul>
                 </div>
-            </ul>
+            </div>
+        </div>
+        <div class="crust-next row m-0">
+            <div class="column bg-body-secondary p-0 d-flex">
+                <a class="btn btn-primary btnPrevious m-2" href="">< Previous Step</a>
+                <a class="btn btn-primary btnNext m-2" href="#">Next Step ></a>
+            </div>
         </div>
     </div>
-</div>
-    <div class="crust-next row m-0">
-        <div class="column bg-body-secondary p-0 d-flex">
-            <a class="btn btn-primary btnPrevious m-2" href="" >< Previous Step</a>
-            <a class="btn btn-primary btnNext m-2" href="#">Next Step ></a>
-        </div>
-    </div>
-</div>
 
-    <div class="toppings-choice container border p-0 tab-pane fade" role="tabpanel" id="toppings-3" aria-labelledby="toppings-3-tab" tabindex="0" >
+    <div class="toppings-choice container border p-0 tab-pane fade" role="tabpanel" id="toppings-3"
+         aria-labelledby="toppings-3-tab" tabindex="0">
         <div class="toppings-alert bg-primary p-2 text-light">Choose your toppings</div>
         <div class="row m-2 tab-pane">
             <div class="choose-meats col card p-0 my-2">
@@ -177,11 +186,13 @@
                     Choose Meats
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><label for="pepperoni"><input type="checkbox" id ="pepperoni" name="meats" value="pepperoni"> Pepperoni</label></li>
+                    <li class="list-group-item"><label for="pepperoni"><input type="checkbox" id="pepperoni" name="meats" value="pepperoni"> Pepperoni</label>
+                    </li>
                     <li class="list-group-item"><label for="bacon"><input type="checkbox" id="bacon" name="meats" value="bacon"> Bacon</label></li>
                     <li class="list-group-item"><label for="ham"><input type="checkbox" id="ham" name="meats" value="ham"> Ham</label></li>
                     <li class="list-group-item"><label for="beef"><input type="checkbox" id="beef" name="meats" value="beef"> Beef</label></li>
-                    <li class="list-group-item"><label for="philly-steak"><input type="checkbox" id="philly-steak" name="meats" value="philly-steak"> Philly Steak</label></li>
+                    <li class="list-group-item"><label for="philly-steak"><input type="checkbox" id="philly-steak" name="meats" value="philly-steak">
+                        Philly Steak</label></li>
                 </ul>
             </div>
         </div>
@@ -191,20 +202,24 @@
                     Choose Non-meats
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><label for="bell-peppers"><input type="checkbox" id ="bell-peppers" name="non-meat" value="bell-peppers"> Bell Peppers</label></li>
+                    <li class="list-group-item"><label for="bell-peppers"><input type="checkbox" id="bell-peppers" name="non-meat" value="bell-peppers">
+                        Bell Peppers</label></li>
                     <li class="list-group-item"><label for="onion"><input type="checkbox" id="onion" name="non-meat" value="onion"> Onion</label></li>
                     <li class="list-group-item"><label for="tomato"><input type="checkbox" id="tomato" name="non-meat" value="tomato"> Tomato</label></li>
-                    <li class="list-group-item"><label for="mushrooms"><input type="checkbox" id="mushrooms" name="non-meat" value="mushrooms"> Mushrooms</label></li>
-                    <li class="list-group-item"><label for="jalapenos"><input type="checkbox" id="jalapenos" name="non-meat" value="jalapenos"> Jalapenos</label></li>
+                    <li class="list-group-item"><label for="mushrooms"><input type="checkbox" id="mushrooms" name="non-meat" value="mushrooms">
+                        Mushrooms</label></li>
+                    <li class="list-group-item"><label for="jalapenos"><input type="checkbox" id="jalapenos" name="non-meat" value="jalapenos">
+                        Jalapenos</label></li>
                 </ul>
                 <div class="cheese-previous row m-0">
                     <div class="column bg-body-secondary p-0 d-flex">
-                        <a class="btn btn-primary btnPrevious m-2" href="#cheese-sauce-2" >< Previous Step</a>
+                        <a class="btn btn-primary btnPrevious m-2" href="#cheese-sauce-2">< Previous Step</a>
+                    </div>
+                </div>
             </div>
-        </div>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"></script>
+
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
+            </script>
 </body>
+
 </html>
