--- a/es6-lecture.html
+++ b/es6-lecture.html
@@ -6,8 +6,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ES6 Lecture</title>
+
 </head>
 <body>
+    <script src="js/es6.js"></script>
 <script>
 
     "use strict";
@@ -17,10 +19,10 @@
     // TODO: Refactor the following older JS code to use more modern syntax. The output should stay the same.
     // consider how variables are created and the values are concatenated in the string
 
-    const greatDessert = 'banana pudding';
-    const badDessert = 'rhubarb pie';
-    let dessertMessage = `Well, I love ${greatDessert} but I don't care for ${badDessert}.`;
-    console.log(dessertMessage);
+    // const greatDessert = 'banana pudding';
+    // const badDessert = 'rhubarb pie';
+    // let dessertMessage = `Well, I love ${greatDessert} but I don't care for ${badDessert}.`;
+    // console.log(dessertMessage);
 
 
 
@@ -85,10 +87,10 @@
     // TODO: Refactor the following code to use ES6 syntax. The output should stay the same.
     // consider the type of loop, concatenation and how variables are declared
 
-    // var message = '';
-    // var names = ['John', 'Paul', 'George', 'Ringo'];
-    // for (let i = 0; i < names.length; i += 1) {
-    //     message += 'Hello, ' + 'name\n';
+    // let message = '';
+    // let names = ['John', 'Paul', 'George', 'Ringo'];
+    // for (let name of names) {
+    //     message += `Hello, ${name}. \n`;
     // }
     // console.log(message);
 
@@ -97,11 +99,10 @@
 
     // TODO: Refactor the following code to use ES6 syntax. The output should stay the same.
     // consider how the function is defined
-
-    // var doubleInput = function(input) {
-    //     return input * 2;
-    // }
-
+    //ARROW FUNCTION
+    //
+    // const doubleInput = input => input * 2;
+    //
     // console.log(doubleInput(5));
 
 
@@ -189,12 +190,14 @@
     //     name: "Sabrina",
     //     isCute: true
     // };
-
+// ES5
     // let breed = puppy.breed;
     // let age = puppy.age;
     // let name = puppy.name;
     // let isCute = puppy.isCute;
 
+
+//ES6
     // let { breed, age, name, isCute } = puppy;
 
     // change the values of the property variable, not the object instance
@@ -207,19 +210,17 @@
     // console.log(name);
     // console.log(isCute);
     // console.log(puppy)
-
-    const data = {
-        hum: ["32%", "35%"],
-        temp: {
-            degreesMetric: 34,
-            degreesImperial: 56
-        },
-        pressure: "1100ml",
-        extra: "asdfasd",
-        extra1: "sdfsdf"
-    }
-
-
+    //
+    // const data = {
+    //     hum: ["32%", "35%"],
+    //     temp: {
+    //         degreesMetric: 34,
+    //         degreesImperial: 56
+    //     },
+    //     pressure: "1100ml",
+    //     extra: "asdfasd",
+    //     extra1: "sdfsdf"
+    // }
 
 
 
@@ -244,12 +245,13 @@
     // destructuring...
 
     // const getArea = ({height, width}) => height * width;
+    // // or const getArea = ((shape)) => shape.height * shape.width;
     //
     // let shape = {
     //     height: 20,
     //     width: 10
     // };
-    // //
+    //
     // let rectangle1 = {
     //     height: 40,
     //     width: 10
@@ -272,7 +274,7 @@
     //
     // console.log(getArea({height, width}));
 
-
+    // NESTED DESTRUCTURING: OBJECT WITHIN AN ARRAY OF OBJECTS
     // function buildWeatherPanel({temp: {degreesMetric, degreesImperial}, pressure, hum}) {
     //     // let { hum, temp, pressure } = data;
     //     // let {degreesMetric, degreesImperial} = temp;
@@ -292,22 +294,22 @@
     // TODO: Refactor the following code to use ES6 syntax. The output should stay the same.
     // consider how property values are added to the object and then used in the function
 
-    function printAuthDetails(user) {
-        console.log(`The username is ${user.username}`);
-        console.log(`The email is ${user.email}`);
-    }
-
-    const email = prompt('Enter an email address');
-    const username = prompt('Enter an a username');
-    const password = prompt('Enter a password');
-
-    const user = {
-        email: email,
-        username: username,
-        password: password
-    };
-
-    printAuthDetails(user);
+    // function printAuthDetails({username, email}) {
+    //     console.log(`The username is ${username}`);
+    //     console.log(`The email is ${email}`);
+    // }
+    //
+    // const email = prompt('Enter an email address');
+    // const username = prompt('Enter a username');
+    // const password = prompt('Enter a password');
+    //
+    // const user = {
+    //     email,
+    //     username,
+    //     password
+    // };
+    //
+    // printAuthDetails(user);
 
 </script>
 
