--- a/js-warmups.html
+++ b/js-warmups.html
@@ -919,74 +919,75 @@
     // Write a function called removeEvens that takes an array of numbers
     // And removes any even number from the array
 
-    let array = [1, 3, 2, 13, 74, 33];
-    //function called removeEvens
-    function removeEvens(array) {
-        //array to hold odd numbers
-        let oddNumbersArray = [];
-        //loop through array (forEach and for of are better loops to check each item in array)
+//     let array = [1, 3, 2, 13, 74, 33];
+//     //function called removeEvens
+//     function removeEvens(array) {
+//         //array to hold odd numbers
+//         let oddNumbersArray = [];
+//         //loop through array (forEach and for of are better loops to check each item in array)
+//
+//         array.forEach((number)=> {
+//             //if even do nothing
+//             //if odd add to the new array
+//             if (number % 2 !== 0) {
+//                 //remove number from array
+//                 oddNumbersArray.push(number);
+//             }
+//             //return new array
+//         });
+//         return oddNumbersArray;
+//     }
+//     console.log(removeEvens(array));
+//
+//
+//     function removeEvenNumbers(inputArray) {
+//         //guard against things that are not an array
+//         if(!Array.isArray(inputArray)) {
+//             return false;
+//         }
+//         //create variable to store odd numbers into new array
+//         const oddNumbers=[];
+//         //loop through each item in array
+//         for (const number of inputArray) {
+//             //guard against any item in the array that is not a number
+//             if(!isANumber(number)) {
+//                 return false;
+//             }
+//             //if number is odd
+//             if(number % 2 === 1) {
+//                 //push to new odd number array
+//                 oddNumbers.push(number);
+//             }
+//             //print new odd number array
+//         } return oddNumbers;
+//     }
+//
+//     console.log(removeEvenNumbers([1,2,5,453,90]));
+//
+//     // with filter method... don't use this yet
+//     // return inputArray.filter(()=> number % 2 !==0);
+//
+//     // Examples:
+//
+//     // Expected Output: [1, 3, 13, 33]
+//
+//     // Input: [62, 3, 2, 8, 531, 7]
+//     // Expected Output: [3, 531, 7]
+//
+//
+//
+//     //USE THIS FUNCTION WHEN FACED W QUESTION W NUMBERS
+// function isANumber(input) {
+//         if (typeof input === "boolean" || input === null) {
+//             return false;
+//         }
+//         if(!isNaN(input)) {
+//             return true;
+//         } else {
+//             return false;
+//         }
+// }
 
-        array.forEach((number)=> {
-            //if even do nothing
-            //if odd add to the new array
-            if (number % 2 !== 0) {
-                //remove number from array
-                oddNumbersArray.push(number);
-            }
-            //return new array
-        });
-        return oddNumbersArray;
-    }
-    console.log(removeEvens(array));
-
-
-    function removeEvenNumbers(inputArray) {
-        //guard against things that are not an array
-        if(!Array.isArray(inputArray)) {
-            return false;
-        }
-        //create variable to store odd numbers into new array
-        const oddNumbers=[];
-        //loop through each item in array
-        for (const number of inputArray) {
-            //guard against any item in the array that is not a number
-            if(!isANumber(number)) {
-                return false;
-            }
-            //if number is odd
-            if(number % 2 === 1) {
-                //push to new odd number array
-                oddNumbers.push(number);
-            }
-            //print new odd number array
-        } return oddNumbers;
-    }
-
-    console.log(removeEvenNumbers([1,2,5,453,90]));
-
-    // with filter method... don't use this yet
-    // return inputArray.filter(()=> number % 2 !==0);
-
-    // Examples:
-
-    // Expected Output: [1, 3, 13, 33]
-
-    // Input: [62, 3, 2, 8, 531, 7]
-    // Expected Output: [3, 531, 7]
-
-
-
-    //USE THIS FUNCTION WHEN FACED W QUESTION W NUMBERS
-function isANumber(input) {
-        if (typeof input === "boolean" || input === null) {
-            return false;
-        }
-        if(!isNaN(input)) {
-            return true;
-        } else {
-            return false;
-        }
-}
 
 </script>
 
